{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 53,
  "lineage": "6e249d5f-405c-3f19-c03a-fbbfd87f15ec",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4e0d0078e612912",
            "arn": "arn:aws:ec2:us-east-2:905418398781:elastic-ip/eipalloc-0c4e0d0078e612912",
            "domain": "vpc",
            "id": "eipalloc-0c4e0d0078e612912",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-21-183.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.21.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-jupiter-dev-eip",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-eip",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e8caf92a48a6fe7",
            "arn": "arn:aws:ec2:us-east-2:905418398781:elastic-ip/eipalloc-04e8caf92a48a6fe7",
            "domain": "vpc",
            "id": "eipalloc-04e8caf92a48a6fe7",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-45-225.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.45.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-jupiter-dev-eip-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-eip-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:internet-gateway/igw-062ca8d4f2e5731bd",
            "id": "igw-062ca8d4f2e5731bd",
            "owner_id": "905418398781",
            "tags": {
              "Name": "APCI-jupiter-dev-igw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-igw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4e0d0078e612912",
            "connectivity_type": "public",
            "id": "nat-0d6341be5c2b055bc",
            "subnet_id": "subnet-0e5eb9de58b8aefdc",
            "tags": {
              "Name": "APCI-jupiter-dev-nat-gw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-nat-gw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.frontend_subnet_az2a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_AZ2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4e0d0078e612912",
            "association_id": "eipassoc-0b2b4e6c890339f25",
            "connectivity_type": "public",
            "id": "nat-00c134ff13a476ae1",
            "network_interface_id": "eni-07a74c4cca47dd080",
            "private_ip": "10.0.1.73",
            "public_ip": "52.14.21.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-042af09424fb329ab",
            "tags": {
              "Name": "APCI-jupiter-dev-nat-gw-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-nat-gw-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_eip.eip_az2b",
            "module.vpc.aws_subnet.frontend_subnet_az2b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:route-table/rtb-0104c3b8660ec9ef2",
            "id": "rtb-0104c3b8660ec9ef2",
            "owner_id": "905418398781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062ca8d4f2e5731bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-jupiter-dev-public_rt",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-public_rt",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:route-table/rtb-0e02323e518c2bfd1",
            "id": "rtb-0e02323e518c2bfd1",
            "owner_id": "905418398781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c134ff13a476ae1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-jupiter-dev-private-rt-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-private-rt-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_eip.eip_az2b",
            "module.vpc.aws_nat_gateway.nat_gw_AZ2b",
            "module.vpc.aws_subnet.frontend_subnet_az2b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca4145e33e56edf",
            "route_table_id": "rtb-0e02323e518c2bfd1",
            "subnet_id": "subnet-0b9b4d2da313ab579"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_eip.eip_az2b",
            "module.vpc.aws_nat_gateway.nat_gw_AZ2b",
            "module.vpc.aws_route_table.private_rt_az2b",
            "module.vpc.aws_subnet.backend_subnet_az2b",
            "module.vpc.aws_subnet.frontend_subnet_az2b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf865c570d408310",
            "route_table_id": "rtb-0e02323e518c2bfd1",
            "subnet_id": "subnet-0cf28fade908b2084"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_eip.eip_az2b",
            "module.vpc.aws_nat_gateway.nat_gw_AZ2b",
            "module.vpc.aws_route_table.private_rt_az2b",
            "module.vpc.aws_subnet.db_subnet_az2b",
            "module.vpc.aws_subnet.frontend_subnet_az2b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet_az2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b260bd46896ea507",
            "route_table_id": "rtb-0104c3b8660ec9ef2",
            "subnet_id": "subnet-0e5eb9de58b8aefdc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.frontend_subnet_az2a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4bfbbce239e021f",
            "route_table_id": "rtb-0104c3b8660ec9ef2",
            "subnet_id": "subnet-042af09424fb329ab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.frontend_subnet_az2b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet_az2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-04533d3054c66b099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04533d3054c66b099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-backend-subnet-az2a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-backend-subnet-az2a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-0b9b4d2da313ab579",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9b4d2da313ab579",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-backend-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-backend-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_az2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-092b818133d06ad96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092b818133d06ad96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-db-subnet-az2a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-db-subnet-az2a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-0cf28fade908b2084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf28fade908b2084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-db-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-db-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet_az2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-0e5eb9de58b8aefdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5eb9de58b8aefdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-frontend-subnet-az1a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-frontend-subnet-az1a",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet_az2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:subnet/subnet-042af09424fb329ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042af09424fb329ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418398781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-frontend-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-frontend-subnet-az2b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0f23f5e125851242e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "apci_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418398781:vpc/vpc-0f23f5e125851242e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06909785e6f30ba20",
            "default_route_table_id": "rtb-00f2b66bd0f8c019f",
            "default_security_group_id": "sg-0c91c6a71c4a26301",
            "dhcp_options_id": "dopt-05dd3a45b23d7bb7c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f23f5e125851242e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f2b66bd0f8c019f",
            "owner_id": "905418398781",
            "tags": {
              "Name": "APCI-jupiter-dev-vpc",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-vpc",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-07T11:31:02Z",
              "environment": "dev",
              "project": "APCI"
            }
          }
        }
      ]
    }
  ]
}